--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
-		<groupId>com.anthavio.maven</groupId>
+		<groupId>net.anthavio.maven</groupId>
 		<artifactId>anthavio-super-pom</artifactId>
 		<version>1-SNAPSHOT</version>
 	</parent>
 	
-	<groupId>com.anthavio</groupId>
+	<groupId>net.anthavio</groupId>
 	<artifactId>anthavio-kitchensink</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
